tests/ui/parser/issues/issue-87217-keyword-order/wrong-const.stderr
error: expected one of `extern` or `fn`, found keyword `const`
  --> $DIR/wrong-const.rs:9:8
   |
LL | unsafe const fn test() {}
   |        ^^^^^ expected one of `extern` or `fn`
   |
   = note: keyword order for functions declaration is `pub`, `default`, `const`, `async`, `unsafe`, `extern`
help: `const` must come before `unsafe`
   |
LL | const unsafe fn test() {}
   | ~~~~~~~~~~~~

error: aborting due to 1 previous error

